<resources>
    <!-- Brandon -->
    <string name="app_name">LocSpend</string>
    <string name="date">October 2024</string>
    <string name="total_budget">Total Budget: %1$d</string>
    <string name="total_spent">Total Spent: %1$d</string>
    <string name="total_remaining">Total Remaining: %1$d</string>
    <string name="percent_budget">65%</string>
    <string name="percent_month">50%</string>
    <string name="through_budget">through\nbudget</string>
    <string name="through_month">through\nmonth</string>
    <string name="table_category">Category</string>

    <string name="budget_database">budgetDatabase</string>
    <string name="userPasswdKV">com.cs407.locspend.userPasswdKV</string>

    <!-- Jessica -->
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Settings Fragment -->
    <string name="settingsString">Settings</string>
    <string name="defaultBudgetString">Default Monthly Budgets:</string>
    <string name="diningString">Dining</string>
    <string name="groceryString">Grocery</string>
    <string name="clothingString">Clothing</string>
    <string name="transportationString">Transportation</string>
    <string name="entertainmentString">Entertainment</string>
    <string name="miscString">Miscellaneous</string>
    <string name="darkModeString">Dark Mode:</string>
    <string name="notificationString">Notification:</string>

    <!-- Charlotte -->
    <string name="username_hint">Enter username</string>
    <string name="password_hint">Enter password</string>
    <string name="sign_in_button">Sign in</string>
    <string name="username_text">Username:</string>
    <string name="password_text">Password:</string>
    <string name="create_account">Create Account</string>
    <string name="number_hint">Enter number</string>
    <string name="number_text">Number:</string>
    <string name="email_hint">Enter email</string>
    <string name="email_text">Email:</string>
    <string name="terms_and_services">I agree to the Terms and Services</string>
    <string name="get_started">GET STARTED</string>
    <string name="fail_login">Wrong username or password</string>
    <string name="channel_name">location_channel</string>
    <string name="channel_description">notifications when location is updated</string>
    <string name="check_budget">Check your budget?</string>
    <string name="ignore">Ignore</string>
    <string name="start_budget">Start Budgeting</string>

    <string name="fail_create">Create Account Failed</string>

    <!-- Morgan -->
    <string name="addr">Please turn location permission on!</string>
    <string name="addrError">Could not find address for current location!</string>
    <string name="category">Category: %1$s</string>
    <string name="plus">+</string>
    <string name="addSpending">Add spending</string>
    <string name="diningBudget">%1$s Budget for October: \$%2$.2f</string>
    <string name="spent">Spent: \$%1$.2f</string>
    <string name="remaining">Remaining: \$%1$.2f</string>
    <string name="summary">%1$d%% through budget, %2$d%% through month</string>
    <string name="header">LocSpend</string>
    <string name="homeButton">Home</string>
    <string name="budgetButton">Budget</string>
    <string name="settingsButton">Settings</string>
</resources>