<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSpendingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp" >

        <TextView
            android:id="@+id/categoryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diningString"
            android:textSize="30sp"
            android:background="#FEC2C2"
            android:padding="10dp" />

        <TextView
            android:id="@+id/categoryTextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/groceryString"
            android:textSize="30sp"
            android:background="#FEC2C2"
            android:padding="10dp"
            android:layout_marginTop="25sp" />

        <TextView
            android:id="@+id/categoryTextView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clothingString"
            android:textSize="30sp"
            android:background="#FEC2C2"
            android:padding="10dp"
            android:layout_marginTop="25sp" />

        <TextView
            android:id="@+id/categoryTextView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transportationString"
            android:textSize="30sp"
            android:background="#FEC2C2"
            android:padding="10dp"
            android:layout_marginTop="25sp" />

        <TextView
            android:id="@+id/categoryTextView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entertainmentString"
            android:textSize="30sp"
            android:background="#FEC2C2"
            android:padding="10dp"
            android:layout_marginTop="25sp" />

        <TextView
            android:id="@+id/categoryTextView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/miscString"
            android:textSize="30sp"
            android:background="#FEC2C2"
            android:padding="10dp"
            android:layout_marginTop="25sp" />

    </LinearLayout>
</FrameLayout>