<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:text="@string/create_account"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/password_text"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText"
        tools:layout_editor_absoluteX="15dp" />

    <TextView
        android:id="@+id/numberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/number_text"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        tools:layout_editor_absoluteX="15dp" />

    <EditText
        android:id="@+id/numberEditText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/circular_edit_text"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numberTextView" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/circular_edit_text"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailTextView" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:layout_marginTop="148dp"
        android:background="@drawable/circular_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameTextView" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/circular_edit_text"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordTextView" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/email_text"
        app:layout_constraintTop_toBottomOf="@id/numberEditText"
        tools:layout_editor_absoluteX="15dp" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_text"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="129dp" />

    <CheckBox
        android:id="@+id/termsAndServicesCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_services"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="517dp" />

    <Button
        android:id="@+id/getStartedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:backgroundTint="#F44336"
        android:outlineAmbientShadowColor="#F44336"
        android:shadowColor="#F44336"
        android:text="@string/get_started"
        android:textColorLink="#EE4E4E"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termsAndServicesCheckBox"
        app:rippleColor="#F44336"
        app:strokeColor="#F44336" />


</androidx.constraintlayout.widget.ConstraintLayout>